--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-/out/
-/db/
-
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries/
 .idea/shelf/
 .idea/libraries/
+
+/out/
+build/
+target/
+
+*.log
+*.tmp
+
+*.key
+*.pem
+.env
+
+/db/
